@@ -1,22 +1,0 @@
-handlers=java.util.logging.ConsoleHandler
-java.util.logging.ConsoleHandler.level=FINEST
-#java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
-java.util.logging.ConsoleHandler.formatter=org.apache.solr.SolrLogFormatter
-
-
-#.level=SEVERE
-.level=INFO
-
-#org.apache.solr.update.processor.LogUpdateProcessor.level=FINEST
-#org.apache.solr.update.processor.DistributedUpdateProcessor.level=FINEST
-#org.apache.solr.update.PeerSync.level=FINEST
-#org.apache.solr.core.CoreContainer.level=FINEST
-#org.apache.solr.cloud.RecoveryStrategy.level=FINEST
-#org.apache.solr.cloud.SyncStrategy.level=FINEST
-#org.apache.solr.cloud.ZkController.level=FINEST
-#org.apache.solr.update.DefaultSolrCoreState.level=FINEST
-#org.apache.solr.common.cloud.ConnectionManager.level=FINEST
-#org.apache.solr.update.UpdateLog.level=FINE
-#org.apache.solr.cloud.ChaosMonkey.level=FINEST
-#org.apache.solr.update.TransactionLog.level=FINEST
-
