@@ -56,6 +56,13 @@ Upgrading from Solr 4.2.0
   and "dynamicFields", respectively, to align with all other schema REST API
   outputs, which use camelCase.  The URL format remains the same: all resource
   names are lowercase. (Steve Rowe)
+  
+* SOLR-3706: Slf4j/logging jars are no longer included in the Solr webapp. All 
+  logging jars are now in example/lib/ext. If you are using another webapp 
+  container, these jars will need to go in the corresponding location for that 
+  container. Changing logging impls is now as easy as updating the jars in this 
+  folder with those necessary for the logging impl you would like. For more 
+  details, see the Slf4j documentation.
 
 Detailed Change List
 ----------------------
@@ -120,6 +127,9 @@ Other Changes
 * SOLR-4607: Use noggit 0.5 release jar rather than a forked copy.  (Yonik Seeley, Robert Muir)
 
 * SOLR-4624: forceNew has been removed from the DirectoryFactory and related java apis.
+  (Mark Miller)
+  
+* SOLR-3706: Ship setup to log with log4j. (ryan, Mark Miller)
 
 ==================  4.2.1 ==================
 
